# osu_death_gd

./: CMakeLists.txt  LICENSE  README.md  changelog.md  mod.json
.github/workflows/: build.yml
cmake/: GeodeFile.cmake  Platform.cmake
src/: includes.hpp  main.cpp
